--- a/assets/fonts/_pcicons/_pcicons.less
+++ b/assets/fonts/_pcicons/_pcicons.less
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: '_pcicons';
-  src:url('../assets/fonts/_pcicons/_pcicons.eot?eecul1');
-  src:url('../assets/fonts/_pcicons/_pcicons.eot?eecul1#iefix') format('embedded-opentype'),
-    url('../assets/fonts/_pcicons/_pcicons.ttf?eecul1') format('truetype'),
-    url('../assets/fonts/_pcicons/_pcicons.woff?eecul1') format('woff'),
-    url('../assets/fonts/_pcicons/_pcicons.svg?eecul1#_pcicons') format('svg');
+  src:url('../fonts/_pcicons/_pcicons.eot?dzwrof');
+  src:url('../fonts/_pcicons/_pcicons.eot?dzwrof#iefix') format('embedded-opentype'),
+    url('../fonts/_pcicons/_pcicons.ttf?dzwrof') format('truetype'),
+    url('../fonts/_pcicons/_pcicons.woff?dzwrof') format('woff'),
+    url('../fonts/_pcicons/_pcicons.svg?dzwrof#_pcicons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: '_pcicons';
-    src: url('../assets/fonts/_pcicons/_pcicons.svg?eecul1#_pcicons') format('svg');
+    src: url('../fonts/_pcicons/_pcicons.svg?dzwrof#_pcicons') format('svg');
   }
 }
 
@@ -35,8 +35,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-._pcicon-the-p:before {
-  content: "\e610";
+._pcicon-p-sq:before {
+  content: "\e904";
 }
 ._pcicon-arrow-up:before {
   content: "\e900";
