--- a/assets/less/_modules/buttons.less
+++ b/assets/less/_modules/buttons.less
@@ -21,7 +21,7 @@ input[type="submit"] {
 .btn {
 	color: #fff;
   font-weight: 500;
-	font-family: @font-serif;
+	font-family: @font-sans;
   // height: 50px;
   // line-height: 49px;
   font-style: italic;
