--- a/assets/less/_partials/global.less
+++ b/assets/less/_partials/global.less
@@ -37,47 +37,19 @@ html,
     -moz-osx-font-smoothing: auto;
   }
 
-  @media @xs {
-    font-size: (@fontSize * 112.5%);
-    font-size: (@fontSize * 1.125em);
-  }
+  // @media @xs {
+  //   font-size: (@fontSize * 112.5%);
+  //   font-size: (@fontSize * 1.125em);
+  // }
 
-  @media @sm {
-    font-size: (@fontSize * 125%);
-    font-size: (@fontSize * 1.25em);
-    // line-height: (@line-height * 1.166667);
-  }
+  // @media @sm {
+  //   font-size: (@fontSize * 125%);
+  //   font-size: (@fontSize * 1.25em);
+  //   // line-height: (@line-height * 1.166667);
+  // }
 
 }
 
 body {
   overflow-x: hidden;
-}
-
-main {
-  position: relative;
-  width: 100%;
-}
-
-figure {
-  margin: 0;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-hr {
-  height: 0;
-  width: 5rem;
-  margin: 2rem auto;
-  border: 0;
-  height: 2px;
-  background: @brand-primary;
-}
-
-#main-wrap {
-  max-width: 100%;
-  overflow: hidden;
 }
