--- a/assets/less/_partials/media-queries.less
+++ b/assets/less/_partials/media-queries.less
@@ -20,23 +20,23 @@
 // @desktop-md:             1600px;
 // @desktop-lg:             1920px;
 
-@gutter:                    48px;
+@gutter:                    40px;
 
 @width-xxs:                 480px;
 @width-xs:                  600px;
 @width-sm:                  840px;
 @width-md:                  960px;
-@width-lg:                  1280px;
+@width-lg:                  1200px;
 @width-xl:                  1440px;
 @width-xxl:                 1600px;
 
-@container-xxs:             (@width-xxs);
-@container-xs:              (@width-xs);
-@container-sm:              (@width-sm);
-@container-md:              (@width-md);
-@container-lg:              (@width-lg);
-@container-xl:              (@width-xl);
-@container-xxl:             (@width-xxl);
+@container-xxs:             @width-xxs;
+@container-xs:              @width-xs;
+@container-sm:              @width-sm;
+@container-md:              @width-md;
+@container-lg:              @width-lg;
+@container-xl:              @width-xl;
+@container-xxl:             @width-xxl;
 
 
 @width-xxs-max:             (@width-xxs - 1);
