--- a/assets/less/_partials/mixins.less
+++ b/assets/less/_partials/mixins.less
@@ -100,7 +100,7 @@
 }
 
 .arrowLink() {
-  font-family: @font-serif;
+  font-family: @font-sans;
   font-size: 1.1rem;
   font-weight: 600;
   font-style: italic;
