--- a/assets/less/_partials/util.less
+++ b/assets/less/_partials/util.less
@@ -15,12 +15,10 @@
 @margin:										@line-height*1rem;
 
 @font-sans:                 'Circular', sans-serif;
-@font-sans-alt:             'Tungsten', sans-serif;
-@font-serif:                'garamond-premier-pro', serif;
-@font-serif-alt:            'superclarendon', serif;
+@font-serif:                serif;
 @font-fixed:                monospace;
 
-@body-font:                 @font-serif;
+@body-font:                 @font-sans;
 @headings-font:             @font-sans;
 
 
