--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -31,7 +31,7 @@ body {
 }
 
 #wpadminbar #wp-admin-bar-_pc_logo.menupop:hover i {
-  color: #FBBF40;
+  color: #fff;
 }
 
 #dg-info {
@@ -89,7 +89,7 @@ body {
 }
 
 #poststuff #wpseo_meta h2.hndle:after {
-  content:'DG Optimization';
+  content:'Practice. Optimization';
 }
 
 #poststuff #wpseo_meta h2.hndle span {
