--- a/assets/less/_pages/article-single.less
+++ b/assets/less/_pages/article-single.less
@@ -92,7 +92,7 @@
     color: @brand-secondary;
     text-transform: uppercase;
     letter-spacing: 0.05rem;
-    padding: 0 25px;
+    padding: 0 (@gutter / 2);
     margin: 0 auto 60px;
     text-align: left;
     display: block;
@@ -103,10 +103,10 @@
       max-width: 600px;
     }
     @media (min-width: 960px) {
-      max-width: 640px;
+      max-width: 600px;
     }
     @media (min-width: 1200px) {
-      max-width: 800px;
+      max-width: 840px;
     }
 
     img {
