--- a/assets/less/_partials/common.less
+++ b/assets/less/_partials/common.less
@@ -2,10 +2,10 @@ main {
   width: 100%;
   overflow: hidden;
   position: relative;
-  min-height: 80vh; // remove this
-  padding-top: @header-height; // remove this
+  // min-height: 80vh; // remove this
+  // padding-top: @header-height; // remove this
   @media @mobile-min {
-    padding-top: @header-height-tall; // remove this
+    // padding-top: @header-height-tall; // remove this
   }
 }
 
