--- a/assets/less/_partials/util.less
+++ b/assets/less/_partials/util.less
@@ -59,7 +59,8 @@
 // COMMON
 
 @header-height:             72px;
-@header-height-tall:        105px;
+@header-height-tall:        120px;
+@header-height-mobile:      60px;
 
 @footer-height:             500px;
 @footer-height-sm:          500px;
