--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1288,13 +1288,6 @@ main {
   width: 100%;
   overflow: hidden;
   position: relative;
-  min-height: 80vh;
-  padding-top: 72px;
-}
-@media (min-width: 960px) {
-  main {
-    padding-top: 105px;
-  }
 }
 #aspot + main {
   padding-top: 0;
@@ -1486,21 +1479,57 @@ address {
 }
 #masthead {
   width: 100%;
-  height: 105px;
-  position: fixed;
+  height: 120px;
+  position: absolute;
   top: 0;
-  left: 0;
-  right: 0;
   z-index: 1030;
+  background: transparent;
   background: rgba(255, 255, 255, 0);
   box-shadow: 0 0 0 rgba(0, 0, 0, 0);
-  transition: all 0.25s ease-out;
+  transition: opacity 0.25s ease-out, -webkit-transform 0.25s ease-out;
+  transition: transform 0.25s ease-out, opacity 0.25s ease-out;
+  transition: transform 0.25s ease-out, opacity 0.25s ease-out, -webkit-transform 0.25s ease-out;
 }
-.has-scrolled #masthead {
+@media (max-width: 959px) {
+  #masthead {
+    height: 60px;
+  }
+}
+#masthead.is-ready {
+  opacity: 1;
+}
+#masthead.has-scrolled {
+  position: fixed;
   height: 72px;
+  top: -77px;
   background: #fff;
-  background: rgba(255, 255, 255, 0.95);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  background: #ffffff;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.075);
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+}
+@media (max-width: 959px) {
+  #masthead.has-scrolled {
+    height: 60px;
+  }
+}
+#masthead.has-scrolled.show-sticky {
+  -webkit-transform: translateY(77px);
+      -ms-transform: translateY(77px);
+          transform: translateY(77px);
+}
+@media (max-width: 839px) {
+  #masthead.has-scrolled.show-sticky.going-down {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+#masthead.has-scrolled.show-sticky.hide-sticky {
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
 }
 @media (max-width: 959px) {
   #masthead {
@@ -1519,34 +1548,25 @@ address {
   z-index: 2;
 }
 .site-branding .site-title {
-  font-size: 28px;
+  color: #bd9756;
+  font-size: 20px;
   font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  margin: 0;
   position: relative;
   z-index: 2;
   top: 50%;
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
+  display: inline-block;
   transition: all 0.25s ease-out;
 }
-.site-branding .site-title a {
-  color: #bd9756;
-  display: block;
-  transition: all 0.25s ease-out;
+.site-branding .site-title:hover {
+  color: #212121;
 }
-.site-branding .site-title a:hover {
-  color: #bd9756;
-}
-@media (max-width: 959px) {
-  .site-branding .site-title a {
+@media (min-width: 840px) {
+  .site-branding .site-title {
     font-size: 24px;
   }
-}
-.has-scrolled .site-branding .site-title a {
-  font-size: 24px;
 }
 .menu-toggle {
   width: 72px;
@@ -1560,34 +1580,37 @@ address {
   z-index: 1;
   opacity: 0;
   visibility: hidden;
+  pointer-events: none;
   transition: all 0.25s ease-out;
 }
 .no-touchevents .menu-toggle:hover {
   color: white;
-  background: #bd9756;
+  background: transparent;
 }
 .menu-toggle:active {
   color: white;
-  background: #bd9756;
+  background: transparent;
   transition: none;
 }
 @media (max-width: 959px) {
   .menu-toggle {
+    width: 60px;
     opacity: 1;
     visibility: visible;
+    pointer-events: auto;
   }
 }
 .menu-toggle span,
 .menu-toggle:after,
 .menu-toggle:before {
   content: '';
-  width: 24px;
-  height: 2px;
+  width: 28px;
+  height: 3px;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -1px 0 0 -12px;
-  background: #b0bec5;
+  margin: -1.5px 0 0 -14px;
+  background: #212121;
   display: block;
   transition: all 0.25s ease-out;
   transition-property: -webkit-transform;
@@ -1609,9 +1632,9 @@ address {
   transition-delay: 0s;
 }
 .menu-toggle:before {
-  -webkit-transform: translateY(-6px);
-      -ms-transform: translateY(-6px);
-          transform: translateY(-6px);
+  -webkit-transform: translateY(-7px);
+      -ms-transform: translateY(-7px);
+          transform: translateY(-7px);
 }
 .show-nav .menu-toggle:before {
   -webkit-transform: rotate(-45deg) translateY(0);
@@ -1620,9 +1643,9 @@ address {
   transition-delay: 0.25s;
 }
 .menu-toggle:after {
-  -webkit-transform: translateY(6px);
-      -ms-transform: translateY(6px);
-          transform: translateY(6px);
+  -webkit-transform: translateY(7px);
+      -ms-transform: translateY(7px);
+          transform: translateY(7px);
 }
 .show-nav .menu-toggle:after {
   -webkit-transform: rotate(45deg) translateY(0);
@@ -1634,19 +1657,19 @@ address {
 .menu-toggle:hover:before,
 .menu-toggle:hover:after {
   width: 28px;
-  margin: -1px 0 0 -14px;
+  margin: -1.5px 0 0 -14px;
 }
 .show-nav .menu-toggle span,
 .show-nav .menu-toggle:after,
 .show-nav .menu-toggle:before {
   width: 28px;
-  margin: -1px 0 0 -14px;
+  margin: -1.5px 0 0 -14px;
   background: #212121;
 }
 .show-nav .menu-toggle:hover span,
 .show-nav .menu-toggle:hover:before,
 .show-nav .menu-toggle:hover:after {
-  background: #b0bec5;
+  background: #212121;
 }
 .main-navigation {
   height: 100%;
@@ -2071,7 +2094,7 @@ fieldset {
 #aspot .set-bg {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   z-index: 1;
   background-repeat: no-repeat;
   background-position: center top;
@@ -2085,37 +2108,50 @@ fieldset {
 #aspot .set-bg.bg-loaded {
   opacity: 1;
 }
+#aspot .set-pre {
+  opacity: 1;
+}
+#aspot .set-pre .pre-bg {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+  opacity: 1;
+  transition: all 1s ease-out;
+}
+#aspot .set-pre.bg-loaded .pre-bg {
+  opacity: 0;
+}
 #aspot h1 {
-  font-size: 100px;
-  line-height: 90px;
-  letter-spacing: -0.025em;
-  text-transform: none;
+  color: #fff;
+  font-family: 'Circular', sans-serif;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1;
   margin: 0;
+  display: inline-block;
 }
-@media (max-width: 959px) {
+@media (min-width: 480px) {
   #aspot h1 {
-    font-size: 80px;
-    line-height: 1;
+    font-size: 32px;
   }
 }
-@media (max-width: 839px) {
+@media (min-width: 840px) {
   #aspot h1 {
-    font-size: 70px;
-    line-height: 1;
-  }
-  [data-height="small"]#aspot h1 {
-    font-size: 50px;
+    font-size: 42px;
   }
 }
-@media (max-width: 599px) {
-  #aspot h1 {
-    font-size: 60px;
-    line-height: 1;
-  }
+#aspot p {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.3;
+  margin: 20px 0 0;
 }
-@media (max-width: 479px) {
-  #aspot h1 {
-    font-size: 40px;
+@media (min-width: 840px) {
+  #aspot p {
+    font-size: 20px;
   }
 }
 #aspot .inner {
@@ -2124,11 +2160,37 @@ fieldset {
   position: relative;
   z-index: 2;
 }
-#aspot .set-bg + .inner h1 {
-  opacity: 0;
-  transition: all 1s ease-out 0.75s;
+#aspot .inner .container {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
-#aspot .set-bg.bg-loaded + .inner h1 {
+#aspot [data-scroll="next"] {
+  color: #fff;
+  font-size: 24px;
+  position: absolute;
+  bottom: 32px;
+  left: 50%;
+  z-index: 2;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+@media (min-width: 840px) {
+  #aspot [data-scroll="next"] {
+    bottom: 48px;
+  }
+}
+#aspot [data-scroll="next"] i {
+  display: block;
+}
+#aspot .set-bg + .inner {
+  opacity: 0;
+  transition: all 0.5s ease-out 0.75s;
+}
+#aspot .set-bg.bg-loaded + .inner {
   opacity: 1;
 }
 #aspot .bgvid {
