--- a/assets/less/_modules/header.less
+++ b/assets/less/_modules/header.less
@@ -3,20 +3,43 @@
 #masthead {
   width: 100%;
   height: @header-height-tall;
-  position: fixed;
+  position: absolute;
   top: 0;
-  left: 0;
-  right: 0;
   z-index: 1030;
+  background: transparent;
   background: rgba(255,255,255,0);
   box-shadow: 0 0 0 rgba(0,0,0,0);
-  .global-transition();
+  transition: transform 0.25s ease-out, opacity 0.25s ease-out;
+  @media @mobile {
+    height: @header-height-mobile;
+  }
 
-  .has-scrolled & {
+  &.is-ready {
+    opacity: 1;
+  }
+
+  &.has-scrolled {
+    position: fixed;
     height: @header-height;
+    top: -(@header-height+5);
     background: #fff;
-    background: rgba(255,255,255,0.95);
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    background: rgba(255,255,255,1);
+    box-shadow: 0 2px 0 rgba(0,0,0,0.075);
+    transform: translateY(0);
+    @media @mobile {
+      height: @header-height-mobile;
+    }
+    &.show-sticky {
+      transform: translateY(@header-height+5);
+      @media @sm-max {
+        &.going-down {
+          transform: translateY(0);
+        }
+      }
+      &.hide-sticky {
+        transform: translateY(0);
+      }
+    }
   }
 
   @media @mobile {
@@ -42,36 +65,22 @@
   }
 
   .site-title {
-    font-size: 28px;
+    color: @brand-secondary;
+    font-size: 20px;
     font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    margin: 0;
     position: relative;
     z-index: 2;
     top: 50%;
+    display: inline-block;
     transform: translateY(-50%);
+    display: inline-block;
     .global-transition();
-
-    a {
-      color: @brand-secondary;
-      display: block;
-      .global-transition();
-
-      &:hover {
-        color: @brand-secondary;
-      }
-
-      @media @mobile {
-        font-size: 24px;
-      }
-
-      .has-scrolled & {
-        font-size: 24px;
-      }
-
+    &:hover {
+      color: @brand-primary;
     }
-
+    @media @sm {
+      font-size: 24px;
+    }
   }
 
 }
@@ -88,25 +97,28 @@
   z-index: 1;
   opacity: 0;
   visibility: hidden;
+  pointer-events: none;
   .global-transition();
-  .mobileHover(white,@brand-secondary);
+  .mobileHover(white,transparent);
 
   @media @mobile {
+    width: @header-height-mobile;
     opacity: 1;
     visibility: visible;
+    pointer-events: auto;
   }
 
   span,
   &:after,
   &:before {
     content:'';
-    width: 24px;
-    height: 2px;
+    width: 28px;
+    height: 3px;
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: -1px 0 0 -12px;
-    background: @blue-grey-200;
+    margin: -1.5px 0 0 -14px;
+    background: @brand-primary;
     display: block;
     .global-transition();
     transition-property: transform;
@@ -126,7 +138,7 @@
   }
 
   &:before {
-    transform: translateY(-6px);
+    transform: translateY(-7px);
     .show-nav & {
       transform: rotate(-45deg) translateY(0);
       transition-delay: 0.25s;
@@ -134,7 +146,7 @@
   }
 
   &:after {
-    transform: translateY(6px);
+    transform: translateY(7px);
     .show-nav & {
       transform: rotate(45deg) translateY(0);
       transition-delay: 0.25s;
@@ -146,7 +158,7 @@
     &:before,
     &:after  {
       width: 28px;
-      margin: -1px 0 0 -14px;
+      margin: -1.5px 0 0 -14px;
     }
   }
 
@@ -156,15 +168,15 @@
     &:after,
     &:before {
       width: 28px;
-      margin: -1px 0 0 -14px;
-      background: @text-color;
+      margin: -1.5px 0 0 -14px;
+      background: @brand-primary;
     }
 
     &:hover {
       span,
       &:before,
       &:after  {
-        background: @blue-grey-200;
+        background: @brand-primary;
       }
 
     }
