--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,1 +1,201 @@
-@charset "UTF-8";@import "//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&subset=latin%2Clatin-ext";@font-face{font-family:'_pcicons';src:url('../fonts/_pcicons/_pcicons.eot?dzwrof');src:url('../fonts/_pcicons/_pcicons.eot?dzwrof#iefix') format('embedded-opentype'),url('../fonts/_pcicons/_pcicons.ttf?dzwrof') format('truetype'),url('../fonts/_pcicons/_pcicons.woff?dzwrof') format('woff'),url('../fonts/_pcicons/_pcicons.svg?dzwrof#_pcicons') format('svg');font-weight:normal;font-style:normal}@media screen and (-webkit-min-device-pixel-ratio:0){@font-face{font-family:'_pcicons';src:url('../fonts/_pcicons/_pcicons.svg?dzwrof#_pcicons') format('svg')}}[class^="_pcicon-"],[class*=" _pcicon-"]{font-family:'_pcicons' !important;speak:none;font-style:normal;font-weight:normal;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}._pcicon-p-sq:before{content:"\e904"}._pcicon-arrow-up:before{content:"\e900"}._pcicon-arrow-down:before{content:"\e901"}._pcicon-arrow-right:before{content:"\e902"}._pcicon-arrow-left:before{content:"\e903"}._pcicon-close:before{content:"\e60a"}._pcicon-chevron-down:before{content:"\e606"}._pcicon-chevron-up:before{content:"\e609"}._pcicon-chevron-left:before{content:"\e607"}._pcicon-chevron-right:before{content:"\e608"}._pcicon-arrowstraight-up:before{content:"\e906"}._pcicon-arrowstraight-down:before{content:"\e907"}._pcicon-arrowstraight-left:before{content:"\e603"}._pcicon-arrowstraight-right:before{content:"\e604"}._pcicon-search:before{content:"\e60d"}._pcicon-email:before{content:"\e60c"}._pcicon-location:before{content:"\e90d"}._pcicon-launch:before{content:"\e905"}._pcicon-menu:before{content:"\e600"}._pcicon-share:before{content:"\e60b"}._pcicon-facebook:before{content:"\ebfc"}._pcicon-google:before{content:"\ec00"}._pcicon-instagram:before{content:"\ec02"}._pcicon-linkedin:before{content:"\ec03"}._pcicon-github:before{content:"\ebfe"}._pcicon-pinterest:before{content:"\ec05"}._pcicon-tumblr:before{content:"\ec07"}._pcicon-twitter:before{content:"\ec09"}._pcicon-houzz:before{content:"\e605"}._pcicon-youtube:before{content:"\e90e"}._pcicon-wp:before{content:"\e602"}body{font-family:"Open Sans",sans-serif}#wpadminbar #wp-admin-bar-_pc_logo.menupop{cursor:pointer}#wpadminbar #wp-admin-bar-_pc_logo .ab-empty-item{padding-left:8px}#wpadminbar #wp-admin-bar-_pc_logo i{font-size:24px;width:24px;height:24px;line-height:24px;float:left;margin-right:6px;position:relative;top:4px;color:#a0a5aa;color:rgba(240,245,250,0.6);display:inline-block}#wpadminbar #wp-admin-bar-_pc_logo.menupop:hover i{color:#fff}#dg-info{color:#888;font-size:13px;line-height:24px}#dg-info a{color:#333}#dg-info i{font-size:24px;width:24px;height:24px;line-height:24px;float:left;margin-right:6px;color:#1e1e1e;background:#FBBF40;display:inline-block}#wpcontent #wp-admin-bar-root-default #wp-admin-bar-wp-logo .ab-item{height:24px;padding:4px}#wpcontent #wp-admin-bar-root-default #wp-admin-bar-wp-logo .ab-item .ab-icon{font-size:24px;width:24px;height:24px;line-height:1;float:none;padding:0;margin:0;display:block;font-family:'_pcicons';speak:none;font-style:normal;font-weight:normal;font-variant:normal;text-transform:none;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}#wpcontent #wp-admin-bar-root-default #wp-admin-bar-wp-logo .ab-item .ab-icon:before{content:"\e601";top:0}#wpadminbar .menupop .ab-sub-wrapper{background:#464b50}#poststuff #wpseo_meta h2.hndle:after{content:'Practice. Optimization'}#poststuff #wpseo_meta h2.hndle span{display:none}
+@charset "UTF-8";
+@import "//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&subset=latin%2Clatin-ext";
+@font-face {
+  font-family: '_pcicons';
+  src: url('../fonts/_pcicons/_pcicons.eot?dzwrof');
+  src: url('../fonts/_pcicons/_pcicons.eot?dzwrof#iefix') format('embedded-opentype'), url('../fonts/_pcicons/_pcicons.ttf?dzwrof') format('truetype'), url('../fonts/_pcicons/_pcicons.woff?dzwrof') format('woff'), url('../fonts/_pcicons/_pcicons.svg?dzwrof#_pcicons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  @font-face {
+    font-family: '_pcicons';
+    src: url('../fonts/_pcicons/_pcicons.svg?dzwrof#_pcicons') format('svg');
+  }
+}
+[class^="_pcicon-"],
+[class*=" _pcicon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: '_pcicons' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+._pcicon-p-sq:before {
+  content: "\e904";
+}
+._pcicon-arrow-up:before {
+  content: "\e900";
+}
+._pcicon-arrow-down:before {
+  content: "\e901";
+}
+._pcicon-arrow-right:before {
+  content: "\e902";
+}
+._pcicon-arrow-left:before {
+  content: "\e903";
+}
+._pcicon-close:before {
+  content: "\e60a";
+}
+._pcicon-chevron-down:before {
+  content: "\e606";
+}
+._pcicon-chevron-up:before {
+  content: "\e609";
+}
+._pcicon-chevron-left:before {
+  content: "\e607";
+}
+._pcicon-chevron-right:before {
+  content: "\e608";
+}
+._pcicon-arrowstraight-up:before {
+  content: "\e906";
+}
+._pcicon-arrowstraight-down:before {
+  content: "\e907";
+}
+._pcicon-arrowstraight-left:before {
+  content: "\e603";
+}
+._pcicon-arrowstraight-right:before {
+  content: "\e604";
+}
+._pcicon-search:before {
+  content: "\e60d";
+}
+._pcicon-email:before {
+  content: "\e60c";
+}
+._pcicon-location:before {
+  content: "\e90d";
+}
+._pcicon-launch:before {
+  content: "\e905";
+}
+._pcicon-menu:before {
+  content: "\e600";
+}
+._pcicon-share:before {
+  content: "\e60b";
+}
+._pcicon-facebook:before {
+  content: "\ebfc";
+}
+._pcicon-google:before {
+  content: "\ec00";
+}
+._pcicon-instagram:before {
+  content: "\ec02";
+}
+._pcicon-linkedin:before {
+  content: "\ec03";
+}
+._pcicon-github:before {
+  content: "\ebfe";
+}
+._pcicon-pinterest:before {
+  content: "\ec05";
+}
+._pcicon-tumblr:before {
+  content: "\ec07";
+}
+._pcicon-twitter:before {
+  content: "\ec09";
+}
+._pcicon-houzz:before {
+  content: "\e605";
+}
+._pcicon-youtube:before {
+  content: "\e90e";
+}
+._pcicon-wp:before {
+  content: "\e602";
+}
+body {
+  font-family: "Open Sans", sans-serif;
+}
+#wpadminbar #wp-admin-bar-_pc_logo.menupop {
+  cursor: pointer;
+}
+#wpadminbar #wp-admin-bar-_pc_logo .ab-empty-item {
+  padding-left: 8px;
+}
+#wpadminbar #wp-admin-bar-_pc_logo i {
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  float: left;
+  margin-right: 6px;
+  position: relative;
+  top: 4px;
+  color: #a0a5aa;
+  color: rgba(240, 245, 250, 0.6);
+  display: inline-block;
+}
+#wpadminbar #wp-admin-bar-_pc_logo.menupop:hover i {
+  color: #fff;
+}
+#dg-info {
+  color: #888;
+  font-size: 13px;
+  line-height: 24px;
+}
+#dg-info a {
+  color: #333;
+}
+#dg-info i {
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  float: left;
+  margin-right: 6px;
+  color: #1e1e1e;
+  background: #FBBF40;
+  display: inline-block;
+}
+#wpcontent #wp-admin-bar-root-default #wp-admin-bar-wp-logo .ab-item {
+  height: 24px;
+  padding: 4px;
+}
+#wpcontent #wp-admin-bar-root-default #wp-admin-bar-wp-logo .ab-item .ab-icon {
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
+  line-height: 1;
+  float: none;
+  padding: 0;
+  margin: 0;
+  display: block;
+  font-family: '_pcicons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+#wpcontent #wp-admin-bar-root-default #wp-admin-bar-wp-logo .ab-item .ab-icon:before {
+  content: "\e601";
+  top: 0;
+}
+#wpadminbar .menupop .ab-sub-wrapper {
+  background: #464b50;
+}
+#poststuff #wpseo_meta h2.hndle:after {
+  content: 'Practice. Optimization';
+}
+#poststuff #wpseo_meta h2.hndle span {
+  display: none;
+}
