updated media queries

--- a/assets/less/_partials/media-queries.less
+++ b/assets/less/_partials/media-queries.less
@@ -93,15 +93,15 @@
 
 
 // MEDIA QUERIES
-@width-xxs:                 (@handset-sm + @gutter);; // 360px;
+@width-xxs:                 @handset-sm; // 360px;
 
-@width-xs:                  (@handset-md + @gutter);; // 480px;
-@width-sm:                  (@handset-lg + @gutter);; // 600px;
-@width-md:                  (@tablet-lg-port + @gutter);; // 960px;
-@width-lg:                  (@tablet-lg-land + @gutter);; // 1280px;
+@width-xs:                  @handset-md; // 480px;
+@width-sm:                  @handset-lg; // 600px;
+@width-md:                  @tablet-lg-port; // 960px;
+@width-lg:                  @tablet-lg-land; // 1280px;
 
-@width-xl:                  (@desktop-sm + @gutter);; // 1440px;
-@width-xxl:                 (@desktop-md + @gutter);; // 1600px;
+@width-xl:                  @desktop-sm; // 1440px;
+@width-xxl:                 @desktop-md; // 1600px;
 
 
 @container-xxs:             (@width-xxs - @gutter);
