updated media queries

--- a/assets/less/_partials/media-queries.less
+++ b/assets/less/_partials/media-queries.less
@@ -104,13 +104,13 @@
 @width-xxl:                 @desktop-md; // 1600px;
 
 
-@container-xxs:             (@width-xxs - @gutter);
-@container-xs:              (@width-xs - @gutter);
-@container-sm:              (@width-sm - @gutter);
-@container-md:              (@width-md - @gutter);
-@container-lg:              (@width-lg - @gutter);
-@container-xl:              (@width-xl - @gutter);
-@container-xxl:             (@width-xxl - @gutter);
+@container-xxs:             @width-xxs;
+@container-xs:              @width-xs;
+@container-sm:              @width-sm;
+@container-md:              @width-md;
+@container-lg:              @width-lg;
+@container-xl:              @width-xl;
+@container-xxl:             @width-xxl;
 
 
 @width-xxs-max:             (@width-xxs - 1);
